5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1735_3118.log
== TEST (2019-05-10 20:33:03) 
-- CODE:
x=float(input("digite um numero"))
a=(x//100)%10
b=(x//10)%10
c=(x%10)
if(x<0):
	print("NAO ARMSTRONG")
elif(x>0)and(x<9):
	n=1
elif(x>=10)and(x<=99):
	n=2
elif(x>=100)and(x<=999):
	n=3

if(x>=0):
	a=a**n
	b=b**n
	c=c**n
	m=a+b+c

if(m==x):
	print("ARMSTRONG")
		
-- OUTPUT:
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 20:33:14) 
-- CODE:
x=float(input("digite um numero"))
a=(x//100)%10
b=(x//10)%10
c=(x%10)
if(x<0):
	print("NAO ARMSTRONG")
elif(x>0)and(x<9):
	n=1
elif(x>=10)and(x<=99):
	n=2
elif(x>=100)and(x<=999):
	n=3

if(x>=0):
	a=a**n
	b=b**n
	c=c**n
	m=a+b+c

if(m==x):
	print("ARMSTRONG")
		
-- OUTPUT:
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 20:33:25) 
-- CODE:
x=float(input("digite um numero"))
a=(x//100)%10
b=(x//10)%10
c=(x%10)
if(x<0):
	print("NAO ARMSTRONG")
elif(x>0)and(x<9):
	n=1
elif(x>=10)and(x<=99):
	n=2
elif(x>=100)and(x<=999):
	n=3

if(x>=0):
	a=a**n
	b=b**n
	c=c**n
	m=a+b+c

if(m==x):
	print("ARMSTRONG")
		
-- OUTPUT:
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 20:33:34) 
-- CODE:
x=float(input("digite um numero"))
a=(x//100)%10
b=(x//10)%10
c=(x%10)
if(x<0):
	print("NAO ARMSTRONG")
elif(x>0)and(x<9):
	n=1
elif(x>=10)and(x<=99):
	n=2
elif(x>=100)and(x<=999):
	n=3

if(x>=0):
	a=a**n
	b=b**n
	c=c**n
	m=a+b+c

if(m==x):
	print("ARMSTRONG")
		
-- OUTPUT:
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 20:34:08) 
-- CODE:
x=float(input("digite um numero"))
a=(x//100)%10
b=(x//10)%10
c=(x%10)
if(x<0):
	print("NAO ARMSTRONG")
elif(x>0)and(x<9):
	n=1
elif(x>=10)and(x<=99):
	n=2
elif(x>=100)and(x<=999):
	n=3

if(x>=0):
	a=a**n
	b=b**n
	c=c**n
	m=a+b+c

if(m==x):
	print("ARMSTRONG")
else:
	m=0
		
-- OUTPUT:
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 20:34:37) 
-- CODE:
x=float(input("digite um numero"))
a=(x//100)%10
b=(x//10)%10
c=(x%10)
if(x<0):
	print("NAO ARMSTRONG")
elif(x>0)and(x<9):
	n=1
elif(x>=10)and(x<=99):
	n=2
elif(x>=100)and(x<=999):
	n=3

if(x>=0):
	a=a**n
	b=b**n
	c=c**n
	m=a+b+c
else:
	m=-200

if(m==x):
	print("ARMSTRONG")

		
-- OUTPUT:
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 20:34:47) 
-- CODE:
x=float(input("digite um numero"))
a=(x//100)%10
b=(x//10)%10
c=(x%10)
if(x<0):
	print("NAO ARMSTRONG")
elif(x>0)and(x<9):
	n=1
elif(x>=10)and(x<=99):
	n=2
elif(x>=100)and(x<=999):
	n=3

if(x>=0):
	a=a**n
	b=b**n
	c=c**n
	m=a+b+c
else:
	m=-200

if(m==x):
	print("ARMSTRONG")

		
-- EXECUTION TIME:
0.24074
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1735/2528/main.py", line 15, in <module>
    a=a**n
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 20:34:51) 
-- CODE:
x=float(input("digite um numero"))
a=(x//100)%10
b=(x//10)%10
c=(x%10)
if(x<0):
	print("NAO ARMSTRONG")
elif(x>0)and(x<9):
	n=1
elif(x>=10)and(x<=99):
	n=2
elif(x>=100)and(x<=999):
	n=3

if(x>=0):
	a=a**n
	b=b**n
	c=c**n
	m=a+b+c
else:
	m=-200

if(m==x):
	print("ARMSTRONG")

		
-- OUTPUT:
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 20:38:25) 
-- CODE:
x=float(input("digite um numero"))
a=(x//100000)%10
b=(x//10000)%10
c=(x//1000)%10
q=(x//100)%10
w=(x//10)%10
e=(x%10)
if(x<0):
	print("NAO ARMSTRONG")
elif(x>0)and(x<9):
	n=1
elif(x>=10)and(x<=99):
	n=2
elif(x>=100)and(x<=999):
	n=3
elif(x>=1000)and(x<=9999):
   n=4
elif(x>=10000)and(x<=99999):
   n=5
elif(x>=100000)and(x<=999999):
	n=6

if(x>=0):
	a=a**n
	b=b**n
	c=c**n
	q=q**n
	w=w**n
	e=e**n
	m=a+b+c+q+w+e
else:
	m=-200

if(m==x):
	print("ARMSTRONG")

		
-- EXECUTION TIME:
0.211336
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1735/2528/main.py", line 24, in <module>
    a=a**n
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 20:38:28) 
-- CODE:
x=float(input("digite um numero"))
a=(x//100000)%10
b=(x//10000)%10
c=(x//1000)%10
q=(x//100)%10
w=(x//10)%10
e=(x%10)
if(x<0):
	print("NAO ARMSTRONG")
elif(x>0)and(x<9):
	n=1
elif(x>=10)and(x<=99):
	n=2
elif(x>=100)and(x<=999):
	n=3
elif(x>=1000)and(x<=9999):
   n=4
elif(x>=10000)and(x<=99999):
   n=5
elif(x>=100000)and(x<=999999):
	n=6

if(x>=0):
	a=a**n
	b=b**n
	c=c**n
	q=q**n
	w=w**n
	e=e**n
	m=a+b+c+q+w+e
else:
	m=-200

if(m==x):
	print("ARMSTRONG")

		
-- OUTPUT:
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 20:38:41) 
-- CODE:
x=float(input("digite um numero"))
a=(x//100000)%10
b=(x//10000)%10
c=(x//1000)%10
q=(x//100)%10
w=(x//10)%10
e=(x%10)
if(x<0):
	print("NAO ARMSTRONG")
elif(x>0)and(x<9):
	n=1
elif(x>=10)and(x<=99):
	n=2
elif(x>=100)and(x<=999):
	n=3
elif(x>=1000)and(x<=9999):
   n=4
elif(x>=10000)and(x<=99999):
   n=5
elif(x>=100000)and(x<=999999):
	n=6

if(x>=0):
	a=a**n
	b=b**n
	c=c**n
	q=q**n
	w=w**n
	e=e**n
	m=a+b+c+q+w+e
else:
	m=-200

if(m==x):
	print("ARMSTRONG")

		
-- OUTPUT:
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 20:39:37) 
-- CODE:
x=float(input("digite um numero"))
a=(x//100000)%10
b=(x//10000)%10
c=(x//1000)%10
q=(x//100)%10
w=(x//10)%10
e=(x%10)
if(x<0):
	print("NAO ARMSTRONG")
elif(x>0)and(x<9):
	n=1
elif(x>=10)and(x<=99):
	n=2
elif(x>=100)and(x<=999):
	n=3
elif(x>=1000)and(x<=9999):
   n=4
elif(x>=10000)and(x<=99999):
   n=5
elif(x>=100000)and(x<=999999):
	n=6

if(x>=0):
	a=a**n
	b=b**n
	c=c**n
	q=q**n
	w=w**n
	e=e**n
	m=a+b+c+q+w+e
else:
	m=-200

if(m==x):
	print("ARMSTRONG")
else:
	print("NAO ARMSTRONG")

		
-- OUTPUT:
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 20:39:46) 
-- CODE:
x=float(input("digite um numero"))
a=(x//100000)%10
b=(x//10000)%10
c=(x//1000)%10
q=(x//100)%10
w=(x//10)%10
e=(x%10)
if(x<0):
	print("NAO ARMSTRONG")
elif(x>0)and(x<9):
	n=1
elif(x>=10)and(x<=99):
	n=2
elif(x>=100)and(x<=999):
	n=3
elif(x>=1000)and(x<=9999):
   n=4
elif(x>=10000)and(x<=99999):
   n=5
elif(x>=100000)and(x<=999999):
	n=6

if(x>=0):
	a=a**n
	b=b**n
	c=c**n
	q=q**n
	w=w**n
	e=e**n
	m=a+b+c+q+w+e
else:
	m=-200

if(m==x):
	print("ARMSTRONG")
else:
	print("NAO ARMSTRONG")

		
-- EXECUTION TIME:
0.201391
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1735/2528/main.py", line 24, in <module>
    a=a**n
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 20:39:55) 
-- CODE:
x=float(input("digite um numero"))
a=(x//100000)%10
b=(x//10000)%10
c=(x//1000)%10
q=(x//100)%10
w=(x//10)%10
e=(x%10)
if(x<0):
	print("NAO ARMSTRONG")
elif(x>0)and(x<9):
	n=1
elif(x>=10)and(x<=99):
	n=2
elif(x>=100)and(x<=999):
	n=3
elif(x>=1000)and(x<=9999):
   n=4
elif(x>=10000)and(x<=99999):
   n=5
elif(x>=100000)and(x<=999999):
	n=6

if(x>=0):
	a=a**n
	b=b**n
	c=c**n
	q=q**n
	w=w**n
	e=e**n
	m=a+b+c+q+w+e
else:
	m=-200

if(m==x):
	print("ARMSTRONG")
else:
	print("NAO ARMSTRONG")

		
-- OUTPUT:
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:29:39) 
-- CODE:
x=float(input("digite um numero"))
while(x>0):
   a=(x//100000)%10
   b=(x//10000)%10
   c=(x//1000)%10
   q=(x//100)%10
   w=(x//10)%10
   e=(x%10)
   if(x>0)and(x<9):
	n=1
   elif(x>=10)and(x<=99):
	n=2
   elif(x>=100)and(x<=999):
	n=3
   elif(x>=1000)and(x<=9999):
   n=4
   elif(x>=10000)and(x<=99999):
   n=5
   elif(x>=100000)and(x<=999999):
	n=6
	a=a**n
	b=b**n
	c=c**n
	q=q**n
	w=w**n
	e=e**n
	m=a+b+c+q+w+e
   if(m==x):
	print("ARMSTRONG")
	x=float(input("Digite um numero: "))
   else:
	print("NAO ARMSTRONG")
	x=float(input("Digite um numero: "))

		
-- ERROR:
File "XXXX", line 10
    n=1
      ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:30:07) 
-- CODE:
x=float(input("digite um numero"))
while(x>0):
   a=(x//100000)%10
   b=(x//10000)%10
   c=(x//1000)%10
   q=(x//100)%10
   w=(x//10)%10
   e=(x%10)
   if(x>0)and(x<9):
	   n=1
   elif(x>=10)and(x<=99):
	   n=2
   elif(x>=100)and(x<=999):
	   n=3
   elif(x>=1000)and(x<=9999):
      n=4
   elif(x>=10000)and(x<=99999):
      n=5
   elif(x>=100000)and(x<=999999):
	   n=6
	a=a**n
	b=b**n
	c=c**n
	q=q**n
	w=w**n
	e=e**n
	m=a+b+c+q+w+e
   if(m==x):
	print("ARMSTRONG")
	x=float(input("Digite um numero: "))
   else:
	print("NAO ARMSTRONG")
	x=float(input("Digite um numero: "))

		
-- ERROR:
File "XXXX", line 21
    a=a**n
         ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:30:41) 
-- CODE:
x=float(input("digite um numero"))
while(x>0):
   a=(x//100000)%10
   b=(x//10000)%10
   c=(x//1000)%10
   q=(x//100)%10
   w=(x//10)%10
   e=(x%10)
   if(x>0)and(x<9):
	   n=1
   elif(x>=10)and(x<=99):
	   n=2
   elif(x>=100)and(x<=999):
	   n=3
   elif(x>=1000)and(x<=9999):
      n=4
   elif(x>=10000)and(x<=99999):
      n=5
   elif(x>=100000)and(x<=999999):
	   n=6
a=a**n
b=b**n
	c=c**n
	q=q**n
	w=w**n
	e=e**n
	m=a+b+c+q+w+e
   if(m==x):
	print("ARMSTRONG")
	x=float(input("Digite um numero: "))
   else:
	print("NAO ARMSTRONG")
	x=float(input("Digite um numero: "))

		
-- ERROR:
File "XXXX", line 23
    c=c**n
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:31:00) 
-- CODE:
x=float(input("digite um numero"))
while(x>0):
   a=(x//100000)%10
   b=(x//10000)%10
   c=(x//1000)%10
   q=(x//100)%10
   w=(x//10)%10
   e=(x%10)
   if(x>0)and(x<9):
	   n=1
   elif(x>=10)and(x<=99):
	   n=2
   elif(x>=100)and(x<=999):
	   n=3
   elif(x>=1000)and(x<=9999):
      n=4
   elif(x>=10000)and(x<=99999):
      n=5
   elif(x>=100000)and(x<=999999):
	   n=6
a=a**n
b=b**n
c=c**n
q=q**n
w=w**n
e=e**n
m=a+b+c+q+w+e
   if(m==x):
	print("ARMSTRONG")
	x=float(input("Digite um numero: "))
   else:
	print("NAO ARMSTRONG")
	x=float(input("Digite um numero: "))

		
-- ERROR:
File "XXXX", line 28
    if(m==x):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:31:19) 
-- CODE:
x=float(input("digite um numero"))
while(x>0):
   a=(x//100000)%10
   b=(x//10000)%10
   c=(x//1000)%10
   q=(x//100)%10
   w=(x//10)%10
   e=(x%10)
   if(x>0)and(x<9):
	   n=1
   elif(x>=10)and(x<=99):
	   n=2
   elif(x>=100)and(x<=999):
	   n=3
   elif(x>=1000)and(x<=9999):
      n=4
   elif(x>=10000)and(x<=99999):
      n=5
   elif(x>=100000)and(x<=999999):
	   n=6
a=a**n
b=b**n
c=c**n
q=q**n
w=w**n
e=e**n
m=a+b+c+q+w+e
if(m==x):
print("ARMSTRONG")
x=float(input("Digite um numero: "))
else:
print("NAO ARMSTRONG")
x=float(input("Digite um numero: "))

		
-- ERROR:
File "XXXX", line 29
    print("ARMSTRONG")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:45:47) 
-- CODE:
x=float(input("digite um numero"))
while(x>0):
	if(x>0):
		a=(x//100000)%10
		b=(x//10000)%10
		c=(x//1000)%10
		d=(x//100)%10
		q=(x//10)%10
		w=(x%10)
		if(x>=0)and(x<=9):
			n=1
		elif(x>=10)and(x<=99):
			n=2
		elif(x>=100)and(x<=999):
			n=3
		elif(x>=1000)and(x<=9999):
			n=4
		elif(x>=10000)and(x<=99999):
			n=5
		elif(x>=100000)and(x<=999999):
			n=6
	 
  

		
-- ERROR:
File "XXXX", line 29
    print("ARMSTRONG")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:46:04) 
-- CODE:
x=float(input("digite um numero"))
while(x>0):
	if(x>0):
		a=(x//100000)%10
		b=(x//10000)%10
		c=(x//1000)%10
		d=(x//100)%10
		q=(x//10)%10
		w=(x%10)
		if(x>=0)and(x<=9):
			n=1
		elif(x>=10)and(x<=99):
			n=2
		elif(x>=100)and(x<=999):
			n=3
		elif(x>=1000)and(x<=9999):
			n=4
		elif(x>=10000)and(x<=99999):
			n=5
		elif(x>=100000)and(x<=999999):
			n=6
		print(n)
	 
  

		
-- OUTPUT:
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:49:30) 
-- CODE:
x=float(input("digite um numero"))
while(x>0):
	if(x>0):
		a=(x//100000)%10
		b=(x//10000)%10
		c=(x//1000)%10
		d=(x//100)%10
		q=(x//10)%10
		w=(x%10)
		if(x>=0)and(x<=9):
			n=1
		elif(x>=10)and(x<=99):
			n=2
		elif(x>=100)and(x<=999):
			n=3
		elif(x>=1000)and(x<=9999):
			n=4
		elif(x>=10000)and(x<=99999):
			n=5
		elif(x>=100000)and(x<=999999):
			n=6
		a=a**n
		b=b**n
		c=c**n
		d=d**n
		q=q**n
		w=w**n
		m=a+b+c+d+q+w
		if(m==x):
			print("ARMSTRONG")
			x=float(input("Digite um numero"))
	else:
		print("NAO ARMSTRONG")
		
	 
  

		
-- OUTPUT:
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:50:34) 
-- CODE:
x=float(input("digite um numero: "))
while(x>0):
	if(x>0):
		a=(x//100000)%10
		b=(x//10000)%10
		c=(x//1000)%10
		d=(x//100)%10
		q=(x//10)%10
		w=(x%10)
		if(x>=0)and(x<=9):
			n=1
		elif(x>=10)and(x<=99):
			n=2
		elif(x>=100)and(x<=999):
			n=3
		elif(x>=1000)and(x<=9999):
			n=4
		elif(x>=10000)and(x<=99999):
			n=5
		elif(x>=100000)and(x<=999999):
			n=6
		a=a**n
		b=b**n
		c=c**n
		d=d**n
		q=q**n
		w=w**n
		m=a+b+c+d+q+w
		if(m==x):
			print("ARMSTRONG")
			x=float(input("Digite um numero"))

if(x<0):
	print("NAO ARMSTRONG")
	 
  

		
-- OUTPUT:
ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:50:53) 
-- CODE:
x=float(input("digite um numero: "))
while(x>0):
	if(x>0):
		a=(x//100000)%10
		b=(x//10000)%10
		c=(x//1000)%10
		d=(x//100)%10
		q=(x//10)%10
		w=(x%10)
		if(x>=0)and(x<=9):
			n=1
		elif(x>=10)and(x<=99):
			n=2
		elif(x>=100)and(x<=999):
			n=3
		elif(x>=1000)and(x<=9999):
			n=4
		elif(x>=10000)and(x<=99999):
			n=5
		elif(x>=100000)and(x<=999999):
			n=6
		a=a**n
		b=b**n
		c=c**n
		d=d**n
		q=q**n
		w=w**n
		m=a+b+c+d+q+w
		if(m==x):
			print("ARMSTRONG")
			x=float(input("Digite um numero"))

if(x<0):
	print("NAO ARMSTRONG")
	 
  

		
-- OUTPUT:
ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:51:40) 
-- CODE:
x=float(input("digite um numero: "))
while(x>0):
	if(x>0):
		a=(x//100000)%10
		b=(x//10000)%10
		c=(x//1000)%10
		d=(x//100)%10
		q=(x//10)%10
		w=(x%10)
		if(x>=0)and(x<=9):
			n=1
		elif(x>=10)and(x<=99):
			n=2
		elif(x>=100)and(x<=999):
			n=3
		elif(x>=1000)and(x<=9999):
			n=4
		elif(x>=10000)and(x<=99999):
			n=5
		elif(x>=100000)and(x<=999999):
			n=6
		a=a**n
		b=b**n
		c=c**n
		d=d**n
		q=q**n
		w=w**n
		m=a+b+c+d+q+w
		if(m==x):
			print("ARMSTRONG")
			x=float(input("Digite um numero: "))
		else:
			("NAO ARMSTRONG")
			x=float(input("Digite um numero: "))

if(x<0):
	print("NAO ARMSTRONG")
	 
  

		
-- OUTPUT:
ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:52:16) 
-- CODE:
x=float(input("digite um numero: "))
while(x>0):
	if(x>0):
		a=(x//100000)%10
		b=(x//10000)%10
		c=(x//1000)%10
		d=(x//100)%10
		q=(x//10)%10
		w=(x%10)
		if(x>=0)and(x<=9):
			n=1
		elif(x>=10)and(x<=99):
			n=2
		elif(x>=100)and(x<=999):
			n=3
		elif(x>=1000)and(x<=9999):
			n=4
		elif(x>=10000)and(x<=99999):
			n=5
		elif(x>=100000)and(x<=999999):
			n=6
		a=a**n
		b=b**n
		c=c**n
		d=d**n
		q=q**n
		w=w**n
		m=a+b+c+d+q+w
		if(m==x):
			print("ARMSTRONG")
			x=float(input("Digite um numero: "))
		else:
			print("NAO ARMSTRONG")
			x=float(input("Digite um numero: "))


	print("NAO ARMSTRONG")
	 
  

		
-- OUTPUT:
ARMSTRONG
NAO ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:52:39) 
-- CODE:
x=float(input("digite um numero: "))
while(x>0):
	if(x>0):
		a=(x//100000)%10
		b=(x//10000)%10
		c=(x//1000)%10
		d=(x//100)%10
		q=(x//10)%10
		w=(x%10)
		if(x>=0)and(x<=9):
			n=1
		elif(x>=10)and(x<=99):
			n=2
		elif(x>=100)and(x<=999):
			n=3
		elif(x>=1000)and(x<=9999):
			n=4
		elif(x>=10000)and(x<=99999):
			n=5
		elif(x>=100000)and(x<=999999):
			n=6
		a=a**n
		b=b**n
		c=c**n
		d=d**n
		q=q**n
		w=w**n
		m=a+b+c+d+q+w
		if(m==x):
			print("ARMSTRONG")
			x=float(input("Digite um numero: "))
		else:
			print("NAO ARMSTRONG")
			x=float(input("Digite um numero: "))


	 
  

		
-- OUTPUT:
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 22:53:04) 
-- CODE:
x=float(input("digite um numero: "))
while(x>0):
	if(x>0):
		a=(x//100000)%10
		b=(x//10000)%10
		c=(x//1000)%10
		d=(x//100)%10
		q=(x//10)%10
		w=(x%10)
		if(x>=0)and(x<=9):
			n=1
		elif(x>=10)and(x<=99):
			n=2
		elif(x>=100)and(x<=999):
			n=3
		elif(x>=1000)and(x<=9999):
			n=4
		elif(x>=10000)and(x<=99999):
			n=5
		elif(x>=100000)and(x<=999999):
			n=6
		a=a**n
		b=b**n
		c=c**n
		d=d**n
		q=q**n
		w=w**n
		m=a+b+c+d+q+w
		if(m==x):
			print("ARMSTRONG")
			x=float(input("Digite um numero: "))
		else:
			print("NAO ARMSTRONG")
			x=float(input("Digite um numero: "))


	 
  

		
-- EXECUTION TIME:
0.271966
-- TEST CASE 1:
---- input:
1
153
-1
---- correct output:
ARMSTRONG
ARMSTRONG
---- user output:

-- TEST CASE 2:
---- input:
100
101
102
103
-1
---- correct output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
---- user output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
-- TEST CASE 3:
---- input:
1634
1635
8208
8209
-1
---- correct output:
ARMSTRONG
NAO ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
---- user output:
ARMSTRONG
NAO ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:55:42) 
-- CODE:
x=float(input("digite um numero: "))
while(x>0):
	if(x>0):
		a=(x//100000)%10
		b=(x//10000)%10
		c=(x//1000)%10
		d=(x//100)%10
		q=(x//10)%10
		w=(x%10)
		if(x>=0)and(x<=9):
			n=1
		elif(x>=10)and(x<=99):
			n=2
		elif(x>=100)and(x<=999):
			n=3
		elif(x>=1000)and(x<=9999):
			n=4
		elif(x>=10000)and(x<=99999):
			n=5
		elif(x>=100000)and(x<=999999):
			n=6
		a=a**n
		b=b**n
		c=c**n
		d=d**n
		q=q**n
		w=w**n
		m=a+b+c+d+q+w
		if(m==x):
			print("ARMSTRONG")
			x=float(input("Digite um numero: "))
		else:
			print("NAO ARMSTRONG")
			x=float(input("Digite um numero: "))


	 
  

		
-- OUTPUT:
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 23:00:36) 
-- CODE:
x=float(input("digite um numero: "))
while(x>0):
	if(x>0):
		a=(x//1000000000)%10
		b=(x//100000000)%10
		c=(x//10000000)%10
		d=(x//1000000)%10
		q=(x//100000)%10
		w=(x//10000)%10
		h=(x//1000)%10
		v=(x//100)%10
		c=(x//10)%10
		p=(x%10)
		if(x>=0)and(x<=9):
			n=1
		elif(x>=10)and(x<=99):
			n=2
		elif(x>=100)and(x<=999):
			n=3
		elif(x>=1000)and(x<=9999):
			n=4
		elif(x>=10000)and(x<=99999):
			n=5
		elif(x>=100000)and(x<=999999):
			n=6
		elif(x>=1000000)and(x<=9999999):
			n=7
		elif(x>=10000000)and(x<=99999999):
			n=8
		elif(x>=100000000)and(x<=999999999):
			n=9
		elif(x>=1000000000)and(x<=9999999999):
			n=10								
		a=a**n
		b=b**n
		c=c**n
		d=d**n
		q=q**n
		w=w**n
		h=h**n
		v=v**n
		c=c**n
		p=p**n
		m=a+b+c+d+q+w+h+v+c+p
		if(m==x):
			print("ARMSTRONG")
			x=float(input("Digite um numero: "))
		else:
			print("NAO ARMSTRONG")
			x=float(input("Digite um numero: "))


	 
  

		
-- OUTPUT:
ARMSTRONG
NAO ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 23:00:57) 
-- CODE:
x=float(input("digite um numero: "))
while(x>0):
	if(x>0):
		a=(x//1000000000)%10
		b=(x//100000000)%10
		c=(x//10000000)%10
		d=(x//1000000)%10
		q=(x//100000)%10
		w=(x//10000)%10
		h=(x//1000)%10
		v=(x//100)%10
		c=(x//10)%10
		p=(x%10)
		if(x>=0)and(x<=9):
			n=1
		elif(x>=10)and(x<=99):
			n=2
		elif(x>=100)and(x<=999):
			n=3
		elif(x>=1000)and(x<=9999):
			n=4
		elif(x>=10000)and(x<=99999):
			n=5
		elif(x>=100000)and(x<=999999):
			n=6
		elif(x>=1000000)and(x<=9999999):
			n=7
		elif(x>=10000000)and(x<=99999999):
			n=8
		elif(x>=100000000)and(x<=999999999):
			n=9
		elif(x>=1000000000)and(x<=9999999999):
			n=10								
		a=a**n
		b=b**n
		c=c**n
		d=d**n
		q=q**n
		w=w**n
		h=h**n
		v=v**n
		c=c**n
		p=p**n
		m=a+b+c+d+q+w+h+v+c+p
		if(m==x):
			print("ARMSTRONG")
			x=float(input("Digite um numero: "))
		else:
			print("NAO ARMSTRONG")
			x=float(input("Digite um numero: "))


	 
  

		
-- EXECUTION TIME:
0.154883
-- TEST CASE 1:
---- input:
1
153
-1
---- correct output:
ARMSTRONG
ARMSTRONG
---- user output:

-- TEST CASE 2:
---- input:
100
101
102
103
-1
---- correct output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
---- user output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
-- TEST CASE 3:
---- input:
1634
1635
8208
8209
-1
---- correct output:
ARMSTRONG
NAO ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
---- user output:
NAO ARMSTRONG
NAO ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 23:11:08) 
-- CODE:
x=float(input("digite um numero: "))
while(x>0):
	if(x>0):
		a=(x//1000000000)%10
		b=(x//100000000)%10
		c=(x//10000000)%10
		d=(x//1000000)%10
		q=(x//100000)%10
		w=(x//10000)%10
		h=(x//1000)%10
		v=(x//100)%10
		c=(x//10)%10
		p=(x%10)
		if(x>=0)and(x<=9):
			n=1
		elif(x>=10)and(x<=99):
			n=2
		elif(x>=100)and(x<=999):
			n=3
		elif(x>=1000)and(x<=9999):
			n=4
		elif(x>=10000)and(x<=99999):
			n=5
		elif(x>=100000)and(x<=999999):
			n=6
		elif(x>=1000000)and(x<=9999999):
			n=7
		elif(x>=10000000)and(x<=99999999):
			n=8
		elif(x>=100000000)and(x<=999999999):
			n=9
		elif(x>=1000000000)and(x<=9999999999):
			n=10								
		a=a**n
		b=b**n
		c=c**n
		d=d**n
		q=q**n
		w=w**n
		h=h**n
		v=v**n
		c=c**n
		p=p**n
		m=a+b+c+d+q+w+h+v+c+p
		if(m==x):
			print("ARMSTRONG")
			x=float(input("Digite um numero: "))
		else:
			print("NAO ARMSTRONG")
			x=float(input("Digite um numero: "))


	 
  

		
-- OUTPUT:
ARMSTRONG
NAO ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 23:13:27) 
-- CODE:
x=float(input("digite um numero: "))
while(x>0):
	if(x>0):
		a=(x//1000000000)%10
		b=(x//100000000)%10
		c=(x//10000000)%10
		d=(x//1000000)%10
		q=(x//100000)%10
		w=(x//10000)%10
		h=(x//1000)%10
		v=(x//100)%10
		c=(x//10)%10
		p=(x%10)
		if(x>=0)and(x<=9):
			n=1
		elif(x>=10)and(x<=99):
			n=2
		elif(x>=100)and(x<=999):
			n=3
		elif(x>=1000)and(x<=9999):
			n=4
		elif(x>=10000)and(x<=99999):
			n=5
		elif(x>=100000)and(x<=999999):
			n=6
		elif(x>=1000000)and(x<=9999999):
			n=7
		elif(x>=10000000)and(x<=99999999):
			n=8
		elif(x>=100000000)and(x<=999999999):
			n=9
		elif(x>=1000000000)and(x<=9999999999):
			n=10								
		a=a**n
		b=b**n
		c=c**n
		d=d**n
		q=q**n
		w=w**n
		h=h**n
		v=v**n
		c=c**n
		p=p**n
		m=a+b+c+d+q+w+h+v+c+p
		print(m)
		if(m==x):
			print("ARMSTRONG")
			x=float(input("Digite um numero: "))
		else:
			print("NAO ARMSTRONG")
			x=float(input("Digite um numero: "))


	 
  

		
-- OUTPUT:
1.0
ARMSTRONG
3906278.0
NAO ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 23:14:26) 
-- CODE:
x=float(input("digite um numero: "))
while(x>0):
	if(x>0):
		a=(x//1000000000)%10
		b=(x//100000000)%10
		c=(x//10000000)%10
		d=(x//1000000)%10
		q=(x//100000)%10
		w=(x//10000)%10
		h=(x//1000)%10
		v=(x//100)%10
		c=(x//10)%10
		p=(x%10)
		if(x>=0)and(x<=9):
			n=1
		elif(x>=10)and(x<=99):
			n=2
		elif(x>=100)and(x<=999):
			n=3
		elif(x>=1000)and(x<=9999):
			n=4
		elif(x>=10000)and(x<=99999):
			n=5
		elif(x>=100000)and(x<=999999):
			n=6
		elif(x>=1000000)and(x<=9999999):
			n=7
		elif(x>=10000000)and(x<=99999999):
			n=8
		elif(x>=100000000)and(x<=999999999):
			n=9
		elif(x>=1000000000)and(x<=9999999999):
			n=10								
		a=a**n
		print(a)
		b=b**n
		print(b)
		c=c**n
		print(c)
		d=d**n
		print(d)
		q=q**n
		print(q)
		w=w**n
		print(w)
		h=h**n
		print(h)
		v=v**n
		print(v)
		c=c**n
		print(c)
		p=p**n
		print(p)
		m=a+b+c+d+q+w+h+v+c+p
		print(m)
		if(m==x):
			print("ARMSTRONG")
			x=float(input("Digite um numero: "))
		else:
			print("NAO ARMSTRONG")
			x=float(input("Digite um numero: "))


	 
  

		
-- OUTPUT:
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
1.0
1.0
ARMSTRONG
0.0
0.0
125.0
0.0
0.0
0.0
0.0
1.0
1953125.0
27.0
3906278.0
NAO ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 23:16:08) 
-- CODE:
x=float(input("digite um numero: "))
while(x>0):
	if(x>0):
		a=(x//1000000000)%10
		b=(x//100000000)%10
		c=(x//10000000)%10
		d=(x//1000000)%10
		q=(x//100000)%10
		w=(x//10000)%10
		h=(x//1000)%10
		v=(x//100)%10
		t=(x//10)%10
		p=(x%10)
		if(x>=0)and(x<=9):
			n=1
		elif(x>=10)and(x<=99):
			n=2
		elif(x>=100)and(x<=999):
			n=3
		elif(x>=1000)and(x<=9999):
			n=4
		elif(x>=10000)and(x<=99999):
			n=5
		elif(x>=100000)and(x<=999999):
			n=6
		elif(x>=1000000)and(x<=9999999):
			n=7
		elif(x>=10000000)and(x<=99999999):
			n=8
		elif(x>=100000000)and(x<=999999999):
			n=9
		elif(x>=1000000000)and(x<=9999999999):
			n=10								
		a=a**n
		print(a)
		b=b**n
		print(b)
		c=c**n
		print(c)
		d=d**n
		print(d)
		q=q**n
		print(q)
		w=w**n
		print(w)
		h=h**n
		print(h)
		v=v**n
		print(v)
		t=t**n
		print(t)
		p=p**n
		print(p)
		m=a+b+c+d+q+w+h+v+c+p
		print(m)
		if(m==x):
			print("ARMSTRONG")
			x=float(input("Digite um numero: "))
		else:
			print("NAO ARMSTRONG")
			x=float(input("Digite um numero: "))


	 
  

		
-- OUTPUT:
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
1.0
1.0
ARMSTRONG
0.0
0.0
0.0
0.0
0.0
0.0
0.0
1.0
125.0
27.0
28.0
NAO ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 23:16:53) 
-- CODE:
x=float(input("digite um numero: "))
while(x>0):
	if(x>0):
		a=(x//1000000000)%10
		b=(x//100000000)%10
		c=(x//10000000)%10
		d=(x//1000000)%10
		q=(x//100000)%10
		w=(x//10000)%10
		h=(x//1000)%10
		v=(x//100)%10
		t=(x//10)%10
		p=(x%10)
		if(x>=0)and(x<=9):
			n=1
		elif(x>=10)and(x<=99):
			n=2
		elif(x>=100)and(x<=999):
			n=3
		elif(x>=1000)and(x<=9999):
			n=4
		elif(x>=10000)and(x<=99999):
			n=5
		elif(x>=100000)and(x<=999999):
			n=6
		elif(x>=1000000)and(x<=9999999):
			n=7
		elif(x>=10000000)and(x<=99999999):
			n=8
		elif(x>=100000000)and(x<=999999999):
			n=9
		elif(x>=1000000000)and(x<=9999999999):
			n=10								
		a=a**n
		print(a)
		b=b**n
		print(b)
		c=c**n
		print(c)
		d=d**n
		print(d)
		q=q**n
		print(q)
		w=w**n
		print(w)
		h=h**n
		print(h)
		v=v**n
		print(v)
		t=t**n
		print(t)
		p=p**n
		print(p)
		m=a+b+c+d+q+w+h+v+t+p
		print(m)
		if(m==x):
			print("ARMSTRONG")
			x=float(input("Digite um numero: "))
		else:
			print("NAO ARMSTRONG")
			x=float(input("Digite um numero: "))


	 
  

		
-- OUTPUT:
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
1.0
1.0
ARMSTRONG
0.0
0.0
0.0
0.0
0.0
0.0
0.0
1.0
125.0
27.0
153.0
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 23:17:13) 
-- CODE:
x=float(input("digite um numero: "))
while(x>0):
	if(x>0):
		a=(x//1000000000)%10
		b=(x//100000000)%10
		c=(x//10000000)%10
		d=(x//1000000)%10
		q=(x//100000)%10
		w=(x//10000)%10
		h=(x//1000)%10
		v=(x//100)%10
		t=(x//10)%10
		p=(x%10)
		if(x>=0)and(x<=9):
			n=1
		elif(x>=10)and(x<=99):
			n=2
		elif(x>=100)and(x<=999):
			n=3
		elif(x>=1000)and(x<=9999):
			n=4
		elif(x>=10000)and(x<=99999):
			n=5
		elif(x>=100000)and(x<=999999):
			n=6
		elif(x>=1000000)and(x<=9999999):
			n=7
		elif(x>=10000000)and(x<=99999999):
			n=8
		elif(x>=100000000)and(x<=999999999):
			n=9
		elif(x>=1000000000)and(x<=9999999999):
			n=10								
		a=a**n
		print(a)
		b=b**n
		print(b)
		c=c**n
		print(c)
		d=d**n
		print(d)
		q=q**n
		print(q)
		w=w**n
		print(w)
		h=h**n
		print(h)
		v=v**n
		print(v)
		t=t**n
		print(t)
		p=p**n
		m=a+b+c+d+q+w+h+v+t+p
		print(m)
		if(m==x):
			print("ARMSTRONG")
			x=float(input("Digite um numero: "))
		else:
			print("NAO ARMSTRONG")
			x=float(input("Digite um numero: "))


	 
  

		
-- OUTPUT:
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
1.0
ARMSTRONG
0.0
0.0
0.0
0.0
0.0
0.0
0.0
1.0
125.0
153.0
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 23:18:10) 
-- CODE:
x=float(input("digite um numero: "))
while(x>0):
	if(x>0):
		a=(x//1000000000)%10
		b=(x//100000000)%10
		c=(x//10000000)%10
		d=(x//1000000)%10
		q=(x//100000)%10
		w=(x//10000)%10
		h=(x//1000)%10
		v=(x//100)%10
		t=(x//10)%10
		p=(x%10)
		if(x>=0)and(x<=9):
			n=1
		elif(x>=10)and(x<=99):
			n=2
		elif(x>=100)and(x<=999):
			n=3
		elif(x>=1000)and(x<=9999):
			n=4
		elif(x>=10000)and(x<=99999):
			n=5
		elif(x>=100000)and(x<=999999):
			n=6
		elif(x>=1000000)and(x<=9999999):
			n=7
		elif(x>=10000000)and(x<=99999999):
			n=8
		elif(x>=100000000)and(x<=999999999):
			n=9
		elif(x>=1000000000)and(x<=9999999999):
			n=10								
		a=a**n
		b=b**n
		c=c**n
		d=d**n
		q=q**n
		w=w**n
		h=h**n
		v=v**n
		t=t**n
		p=p**n
		m=a+b+c+d+q+w+h+v+t+p
		if(m==x):
			print("ARMSTRONG")
			x=float(input("Digite um numero: "))
		else:
			print("NAO ARMSTRONG")
			x=float(input("Digite um numero: "))


	 
  

		
-- EXECUTION TIME:
0.157152
-- TEST CASE 1:
---- input:
1
153
-1
---- correct output:
ARMSTRONG
ARMSTRONG
---- user output:

-- TEST CASE 2:
---- input:
100
101
102
103
-1
---- correct output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
---- user output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
-- TEST CASE 3:
---- input:
1634
1635
8208
8209
-1
---- correct output:
ARMSTRONG
NAO ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
---- user output:
ARMSTRONG
NAO ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 23:18:15) 
-- CODE:
x=float(input("digite um numero: "))
while(x>0):
	if(x>0):
		a=(x//1000000000)%10
		b=(x//100000000)%10
		c=(x//10000000)%10
		d=(x//1000000)%10
		q=(x//100000)%10
		w=(x//10000)%10
		h=(x//1000)%10
		v=(x//100)%10
		t=(x//10)%10
		p=(x%10)
		if(x>=0)and(x<=9):
			n=1
		elif(x>=10)and(x<=99):
			n=2
		elif(x>=100)and(x<=999):
			n=3
		elif(x>=1000)and(x<=9999):
			n=4
		elif(x>=10000)and(x<=99999):
			n=5
		elif(x>=100000)and(x<=999999):
			n=6
		elif(x>=1000000)and(x<=9999999):
			n=7
		elif(x>=10000000)and(x<=99999999):
			n=8
		elif(x>=100000000)and(x<=999999999):
			n=9
		elif(x>=1000000000)and(x<=9999999999):
			n=10								
		a=a**n
		b=b**n
		c=c**n
		d=d**n
		q=q**n
		w=w**n
		h=h**n
		v=v**n
		t=t**n
		p=p**n
		m=a+b+c+d+q+w+h+v+t+p
		if(m==x):
			print("ARMSTRONG")
			x=float(input("Digite um numero: "))
		else:
			print("NAO ARMSTRONG")
			x=float(input("Digite um numero: "))


	 
  

		
-- OUTPUT:
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 23:19:14) 
-- CODE:
x=float(input("digite um numero: "))
while(x>=0):
	if(x>=0):
		a=(x//1000000000)%10
		b=(x//100000000)%10
		c=(x//10000000)%10
		d=(x//1000000)%10
		q=(x//100000)%10
		w=(x//10000)%10
		h=(x//1000)%10
		v=(x//100)%10
		t=(x//10)%10
		p=(x%10)
		if(x>=0)and(x<=9):
			n=1
		elif(x>=10)and(x<=99):
			n=2
		elif(x>=100)and(x<=999):
			n=3
		elif(x>=1000)and(x<=9999):
			n=4
		elif(x>=10000)and(x<=99999):
			n=5
		elif(x>=100000)and(x<=999999):
			n=6
		elif(x>=1000000)and(x<=9999999):
			n=7
		elif(x>=10000000)and(x<=99999999):
			n=8
		elif(x>=100000000)and(x<=999999999):
			n=9
		elif(x>=1000000000)and(x<=9999999999):
			n=10								
		a=a**n
		b=b**n
		c=c**n
		d=d**n
		q=q**n
		w=w**n
		h=h**n
		v=v**n
		t=t**n
		p=p**n
		m=a+b+c+d+q+w+h+v+t+p
		if(m==x):
			print("ARMSTRONG")
			x=float(input("Digite um numero: "))
		else:
			print("NAO ARMSTRONG")
			x=float(input("Digite um numero: "))


	 
  

		
-- OUTPUT:
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 23:19:25) 
-- CODE:
x=float(input("digite um numero: "))
while(x>=0):
	if(x>=0):
		a=(x//1000000000)%10
		b=(x//100000000)%10
		c=(x//10000000)%10
		d=(x//1000000)%10
		q=(x//100000)%10
		w=(x//10000)%10
		h=(x//1000)%10
		v=(x//100)%10
		t=(x//10)%10
		p=(x%10)
		if(x>=0)and(x<=9):
			n=1
		elif(x>=10)and(x<=99):
			n=2
		elif(x>=100)and(x<=999):
			n=3
		elif(x>=1000)and(x<=9999):
			n=4
		elif(x>=10000)and(x<=99999):
			n=5
		elif(x>=100000)and(x<=999999):
			n=6
		elif(x>=1000000)and(x<=9999999):
			n=7
		elif(x>=10000000)and(x<=99999999):
			n=8
		elif(x>=100000000)and(x<=999999999):
			n=9
		elif(x>=1000000000)and(x<=9999999999):
			n=10								
		a=a**n
		b=b**n
		c=c**n
		d=d**n
		q=q**n
		w=w**n
		h=h**n
		v=v**n
		t=t**n
		p=p**n
		m=a+b+c+d+q+w+h+v+t+p
		if(m==x):
			print("ARMSTRONG")
			x=float(input("Digite um numero: "))
		else:
			print("NAO ARMSTRONG")
			x=float(input("Digite um numero: "))


	 
  

		
-- EXECUTION TIME:
0.163057
-- TEST CASE 1:
---- input:
1
153
-1
---- correct output:
ARMSTRONG
ARMSTRONG
---- user output:
ARMSTRONG
ARMSTRONG
ARMSTRONG
-- TEST CASE 2:
---- input:
100
101
102
103
-1
---- correct output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
---- user output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
-- TEST CASE 3:
---- input:
1634
1635
8208
8209
-1
---- correct output:
ARMSTRONG
NAO ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
---- user output:
ARMSTRONG
NAO ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
